...
              child: const Icon(Icons.people),
            ),
            label: 'Customers',
          ),
          const BottomNavigationBarItem(
            icon: Icon(Icons.person),
            label: 'Profile',
          ),
        ],
      ),
    );
  }
}
...
