...

    return Scaffold(
      backgroundColor: const Color(0xFFF8F9FB),
      appBar: AppBar(
        backgroundColor: const Color(0xFF0052CC),
        elevation: 0,
        title: const Text('My Tasks', style: TextStyle(fontWeight: FontWeight.bold, fontSize: 20, color: Colors.white)),
        bottom: const LoadingAppBarStrip(),
        centerTitle: false,
        iconTheme: const IconThemeData(color: Colors.white),
        systemOverlayStyle: const SystemUiOverlayStyle(
          statusBarColor: Color(0xFF0052CC),
          statusBarIconBrightness: Brightness.light,
...
